--- a/client/public/assets/stylesheets/homepage.css
+++ b/client/public/assets/stylesheets/homepage.css
@@ -52,6 +52,7 @@
    background: url('./images/search-icon.svg');
    background-size: contain;
    background-repeat: no-repeat;
+   background-position: center;
    width: 50px;
    height: 50px;
    top: 0;
